# git-orchestrator

./: CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
.claude/tasks/completed/: auto-updater.md
.claude/tasks/frontend-v2-ux/: 00-overview.md  01-row-cleanup.md  02-sidebar-collapse.md  03-contextual-primary.md  04-keyboard-palette.md  05-attention-sort.md
.github/workflows/: cross-platform-check.yml  release.yml
docs/: architecture.md  contributing.md  releasing.md  security.md
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  models.rs  tray.rs  util.rs
src-tauri/src/commands/: activity.rs  auto_fetch.rs  branch.rs  cli_actions.rs  git_ops.rs  mod.rs  repos.rs  settings.rs  stash.rs  status.rs  system.rs  workspaces.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/git/: branch.rs  log.rs  mod.rs  remote.rs  runner.rs  stash.rs  status.rs
src/components/: CommandPalette.tsx  GitSetupBanner.tsx  RepoActions.tsx  RepoChangesPanel.tsx  RepoKebabMenu.tsx  RepoList.tsx  RepoRow.tsx  RepoToolbar.tsx  Sidebar.tsx  WorkspaceSwitcher.tsx
src/components/dialogs/: ActivityFeedDialog.tsx  BranchPickerDialog.tsx  CommitPushDialog.tsx  (+10 more)
src/hooks/: useGlobalKeymap.ts
src/lib/: autoFetch.ts  gitErrors.ts  platform.ts  repoActionsResolver.ts  repoSort.ts  repoState.ts  tauri.ts  trayTooltip.ts  updater.ts
src/stores/: filterStore.ts  focusStore.ts  reposStore.ts  selectionStore.ts  settingsStore.ts  stashesStore.ts  uiStore.ts  workspacesStore.ts
(+2 files in other folders)
