[package]
name = "repo-dashboard"
version = "0.2.0-dev"
description = "Repo Dashboard — local git repo sync/status dashboard"
authors = ["Nordlabs"]
edition = "2021"

[lib]
name = "repo_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1"
thiserror = "1"
dirs = "5"
url = "2"
